--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ body {
     background-color: rgb(26, 26, 26);
     color: rgb(75, 75, 75);
     font-family: "Roboto Mono", "Roboto Mono", "Vazirmatn", monospace;
+    line-height: 1.6rem;
 }
 
 button {
@@ -54,6 +55,19 @@ canvas {
 .menu-section {
     width: 100%;
     height: 10rem;
+}
+
+.title {
+    color: rgb(151, 151, 151);
+    padding: 0.5rem;
+    margin: 1rem;
+}
+
+.btn {
+    margin: 1rem;
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    font-weight: bold;
 }
 
 button:hover {
